[package]
name = "edgeupdate-provision"
version = "0.1.2"
authors = ["Wim <wim@42.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
error-chain = "0.12"
base64 = "0.13.0"
hex = "0.4.3"
